# agentic-BPR-workflow

./: .gitignore  README.md  pyproject.toml
outputs/: BATCH-001.json  BATCH-002.json  BATCH-003.json  BATCH-004.json  BATCH-005.json  bpr_agentic_analysis_results.json  sharepoint_import.csv
src/novartis_agentic_demo/: BPR-agentic-analysis.py  __init__.py  __main__.py  export_to_csv.py  llm_config.py  sync_to_sharepoint.py
